--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using DEV-ECON.</noscript>
 </body>
 </html>
