Integración de etiquetas necesarias para el posicionamiento organico SEO <title>, <meta name='description'>, <meta name='keywords'> tomando los datos descargados de los superhéroes tanto en el listado como en la ficha descriptivo.

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv=”Content-Language” content=”en” />
-  <title>Superhero / DEV ECON</title>
+  <title>Superhero / DEV - ECON</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" constent="Multiple universes superheroes" />
-  <meta name="keywords" constent="Multiple, Universes, Superheroes, DEV ECON" />
+  <meta name="description" content="Multiple universes superheroes" />
+  <meta name="keywords" content="Multiple, Universes, Superheroes, DEV ECON" />
   <meta name="author" content="Diego Montoya">
   <meta name="copyright" content="© 2020" />
   <meta name="distribution" content="global" />
