--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,19 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using DEV-ECON.</noscript>
+  <div class="postman">
+    <div class="postman-run-button" data-postman-action="collection/import" data-postman-var-1="0adb412bcd000204daad">
+    </div>
+    <script type="text/javascript">
+      (function (p, o, s, t, m, a, n) {
+        !p[s] && (p[s] = function () { (p[t] || (p[t] = [])).push(arguments); });
+        !o.getElementById(s + t) && o.getElementsByTagName("head")[0].appendChild((
+          (n = o.createElement("script")),
+          (n.id = s + t), (n.async = 1), (n.src = m), n
+        ));
+      }(window, document, "_pm", "PostmanRunObject", "https://run.pstmn.io/button.js"));
+    </script>
+  </div>
 </body>
 
 </html>
